# PANORAMA

./: .readthedocs.yaml  MANIFEST.in  README.md  VERSION  panorama.yml  pyproject.toml  requirements.txt  setup.py
.docs/: conf.py  index.md  sphinx_requirements.txt
.docs/_static/css/: custom.css
.docs/api/: indice_and_table.md  panorama.annotate.md  panorama.format.md  panorama.md  panorama.utility.md
.docs/developper/: buildDoc.md  draw_spot_script.md  unitTest.md
.docs/modeller/: FAQ.md  contribute.md  modeling.md  overview.md  translate.md
.docs/source/: conf.py  index.md  index.rst
.docs/source/api/: panorama.alignment.md  panorama.compare.md  panorama.detection.md  panorama.format.md  panorama.info.md  panorama.md  panorama.utility.md
.docs/source/developper/: buildDoc.md
.docs/source/modeller/: FAQ.md  modeling.md  overview.md  translate.md
.docs/source/user/: align.md  annotation.md  cluster.md  compare.md  detection.md  draw.md  info.md  install.md  projection.md  report.md  utility.md  write.md
.docs/source/user/Compare/: spots.md  systems.md
.docs/source/user/utilities/: align.md  clustering.md
.docs/user/: install.md  systems.md
.docs/user/Compare/: spots.md  systems.md
.docs/user/Systems/: annotation.md  detection.md  projection.md  write_systems.md
.docs/user/pictures/: heatmap_number_sys.html
.docs/user/utilities/: clustering.md  info.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: asking-questions-or-sharing-ideas.md  enhancement-suggestion.md  feature_request.md
.github/workflows/: bump_version.yml  check_doc.yml  check_recipes.yml  main.yml  ruff.yml
docs/: conf.py  index.md  sphinx_requirements.txt
docs/_static/css/: custom.css
docs/_templates/: summary.rst
docs/api/: api_ref.md  modules.md  panorama.alignment.md  panorama.compare.md  panorama.info.md  panorama.md  panorama.systems.md  panorama.utility.translate.md  panorama.workflow.md
docs/developer/: buildDoc.md  contribute.md  devRules.md  developer_guide.md  figure_script.md  git.md  tipsandtricks.md  unitTest.md  workflows.md  write.md  write_flat_script.md
docs/developper/: buildDoc.md  conserved_spot_script.md  contribute.md  devRules.md  developper_guide.md  draw.md  figure_script.md  git.md  system_asso_script.md  unitTest.md
docs/modeler/: modeler_guide.md  modeling.md  overview.md  translate.md
docs/modeller/: modeler_guide.md  modeling.md  overview.md  translate.md
docs/user/: align.md  annotation.md  association.md  clustering.md  compare.md  compare_spots.md  compare_systems.md  detection.md  index.md  info.md  install.md  issues.md  pansystems.md  partition.md  projection.md  quick_compare.md  quick_usage.md  systems_association.md  user_guide.md  utility.md  write_systems.md
docs/user/Compare/: systems.md
docs/user/Systems/: annotation.md  detection.md  projection.md  write_systems.md
docs/user/utilities/: align.md
panorama/: PanFluidity.py  __init__.py  annotation.py  geneFamily.py  main.py  models.py  panDB.py  pangenomes.py  region.py  system.py  utils.py
panorama/alignment/: __init__.py  align.py  cluster.py  common.py  utils.py
panorama/annotate/: __init__.py  annotate.py  hmm_search.py
panorama/annotation/: __init__.py  annot.py  annotate.py  annotation.py  hmm_search.py  rules.py  system_search.py
panorama/compare/: __init__.py  comparison.py  context.py  module.py  spots.py  systems.py  utils.py
panorama/db-graph/: export.py  translatePan.py
panorama/dbGraph/: __init__.py  exportPan.py  panDB.py  pangraph_db.py  translatePan.py
panorama/detection/: __init__.py  detection.py  models.py  systems.py
panorama/fluidity/: PanFluidity.py  visualisation.py
panorama/format/: __init__.py  cgview_template.json  conserved_spot.py  draw_spot_system.py  figure.py  read_binaries.py  system_association.py  writeCGView.py  write_binaries.py  write_flat.py  write_proksee.py
panorama/info/: __init__.py  content.py  download.js  filterData.js  hide_show.js  info.py  module.py
panorama/systems/: __init__.py  detection.py  models.py  system.py  system_association.py  systems_association.py  systems_partitions.py  systems_projection.py  systems_proksee.py  utils.py  write_systems.py
panorama/utility/: __init__.py  genInput.py  translate.py  utility.py
panorama/utility/translate/: __init__.py  macsymodel_translator.py  padloc_translator.py  translate.py
panorama/utils/: __init__.py  translate.py  utils.py
panorama/workflow/: __init__.py  pansystems.py
testingDataset/annot/: translate.py
tests/: conftest.py  context_test.py  test_gene_family.py
tests/functional_tests/: test_compare_spots.py  test_compare_systems.py  test_info.py  test_pansystems.py  test_system_cmds.py  test_utils_cmd.py
tests/functional_tests/expected_outputs/: all_conserved_spots.tsv  conserved_spots.gexf  conserved_spots.graphml  systems_link_with_conserved_spots_louvain.gexf  systems_link_with_conserved_spots_louvain.graphml  test_write_systems.GTDB_refseq_s__Vibrio_cincinnatiensis_id1690.systems.tsv  test_write_systems.GTDB_refseq_s__Vibrio_neptunius_id1710.systems.tsv  test_write_systems.GTDB_refseq_s__Vibrio_tarriae_id1717.systems.tsv
tests/functional_tests/expected_outputs/conserved_spots/: conserved_spot_24.tsv  conserved_spot_3.tsv  conserved_spot_33.tsv  conserved_spot_60.tsv
tests/systems/: test_detection.py  test_models.py  test_systems.py  test_systems_projection.py  test_utils.py
tests/test_systems/: test_models.py  test_systems.py
tests/unit_tests/: context_test.py
tests/unit_tests/systems/: test_detection.py  test_models.py  test_systems.py  test_systems_projection.py  test_utils.py
tests/utils/: file_compare.py  run_command.py
